k8s/test_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test-nginx
  name: test-nginx
  namespace: tests
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-nginx
  template:
    metadata:
      labels:
        app: test-nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.25.5
          resources:
            limits:
              cpu: 300m
              memory: 300Mi
            requests:
              cpu: 150m
              memory: 200Mi
        - name: busybox
          args:
            - sleep
            - "3600"
          image: busybox:1.36.1
        - name: mysql
          image: mysql:8.4.0
